force-app/main/default/objects/OpportunityLineItem/fields/AddUpKijun__c.field-meta.xml
<CustomField>
    <fullName>AddUpKijun__c</fullName>
    <label>計上基準</label>
    <length>255</length>
    <type>Text</type>
</CustomField>