force-app/main/default/objects/OpportunityLineItem/fields/AddUpTerm__c.field-meta.xml
<CustomField>
    <fullName>AddUpTerm__c</fullName>
    <label>計上期間</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1ヶ月</fullName>
            </value>
            <value>
                <fullName>3ヶ月</fullName>
            </value>
            <value>
                <fullName>6ヶ月</fullName>
            </value>
            <value>
                <fullName>1年</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>