force-app/main/default/objects/OpportunityLineItem/fields/AutoCreation__c.field-meta.xml
<CustomField>
    <fullName>AutoCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動作成フラグ</label>
    <type>Checkbox</type>
</CustomField>