force-app/main/default/objects/OpportunityLineItem/fields/b__c.field-meta.xml
<CustomField>
    <fullName>b__c</fullName>
    <label>b</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>