force-app/main/default/objects/OpportunityLineItem/fields/BeforJikkenfuragu__c.field-meta.xml
<CustomField>
    <fullName>BeforJikkenfuragu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>前月実推フラグ</label>
    <type>Checkbox</type>
</CustomField>