force-app/main/default/objects/OpportunityLineItem/fields/BenefitHslMeisai__c.field-meta.xml
<CustomField>
    <fullName>BenefitHslMeisai__c</fullName>
    <formula>TotalPrice - TotalSupplierAmount__c</formula>
    <label>利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>