force-app/main/default/objects/OpportunityLineItem/fields/BenefitRate__c.field-meta.xml
<CustomField>
    <fullName>BenefitRate__c</fullName>
    <formula>(TotalPrice/BenefitHslMeisai__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>利益率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>