force-app/main/default/objects/OpportunityLineItem/fields/BudgetAddUpFlg__c.field-meta.xml
<CustomField>
    <fullName>BudgetAddUpFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>実推フラグ</label>
    <type>Checkbox</type>
</CustomField>