force-app/main/default/objects/OpportunityLineItem/fields/CAS_Field1__c.field-meta.xml
<CustomField>
    <fullName>CAS_Field1__c</fullName>
    <description>CAS用項目</description>
    <inlineHelpText>受注・他決が決定した時期。
状態区分を受注、他決に変更した場合に入力。</inlineHelpText>
    <label>受他決時期</label>
    <type>Date</type>
</CustomField>