force-app/main/default/objects/OpportunityLineItem/fields/CAS_PartsNo__c.field-meta.xml
<CustomField>
    <fullName>CAS_PartsNo__c</fullName>
    <description>CAS用項目</description>
    <label>パーツNo.</label>
    <length>12</length>
    <type>Text</type>
</CustomField>