force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcConditionRecord_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcConditionRecord_MTE__c</fullName>
    <label>SAP Condition Record MTE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>