force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcPostDate_PIR_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPostDate_PIR_MTE__c</fullName>
    <description>SAP Posting Date of Purchasing Info Record for MTE</description>
    <label>SAP Post Date PIR MTE</label>
    <type>DateTime</type>
</CustomField>