force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcPostStatus_PIR_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPostStatus_PIR_MTE__c</fullName>
    <description>SAP Posting Status of Purchasing Info Record for MTE</description>
    <label>SAP Post Status PIR_MTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>