force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcPricingProcedureCounter__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPricingProcedureCounter__c</fullName>
    <label>SAP Pricing Procedure Counter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>