force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcPricingProcedureStep__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPricingProcedureStep__c</fullName>
    <label>SAP Pricing Procedure Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>