force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcSalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSalesOrderNumber__c</fullName>
    <label>SAP Sales Order Number (STE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>