force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcSendDate__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSendDate__c</fullName>
    <label>SAP Send Date (STE)</label>
    <type>DateTime</type>
</CustomField>