force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcSendDate_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSendDate_MTE__c</fullName>
    <label>SAP Send Date (MTE)</label>
    <type>DateTime</type>
</CustomField>