force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcSendDate_WBS__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSendDate_WBS__c</fullName>
    <label>SAP WBS Send Date</label>
    <type>DateTime</type>
</CustomField>