force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcSendStatus__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSendStatus__c</fullName>
    <label>SAP Send Status (STE)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>