force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcSendStatus_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSendStatus_MTE__c</fullName>
    <label>SAP Send Status (MTE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>