force-app/main/default/objects/OpportunityLineItem/fields/CO_ovcSendStatus_WBS__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSendStatus_WBS__c</fullName>
    <label>SAP WBS Send Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>