force-app/main/default/objects/OpportunityLineItem/fields/ConstructionOrder__c.field-meta.xml
<CustomField>
    <fullName>ConstructionOrder__c</fullName>
    <formula>IF ( FreeProductFlag__c ,  ConstructionOrderInput__c , PricebookEntry.Product2.StructureSortNo__c)</formula>
    <label>構成順</label>
    <type>Text</type>
</CustomField>