force-app/main/default/objects/OpportunityLineItem/fields/ConstructionOrderInput__c.field-meta.xml
<CustomField>
    <fullName>ConstructionOrderInput__c</fullName>
    <label>構成順 (自由入力用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>