force-app/main/default/objects/OpportunityLineItem/fields/CostUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CostUnitPrice__c</fullName>
    <formula>IF(Option__c, 0,
PurchasePrice__c * (1 - PurchaseDiscountPercent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price (Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>