force-app/main/default/objects/OpportunityLineItem/fields/CountNumber__c.field-meta.xml
<CustomField>
    <fullName>CountNumber__c</fullName>
    <description>CAS用項目</description>
    <displayFormat>{000000}</displayFormat>
    <label>通番</label>
    <type>AutoNumber</type>
</CustomField>