force-app/main/default/objects/OpportunityLineItem/fields/cre_mo2__c.field-meta.xml
<CustomField>
    <fullName>cre_mo2__c</fullName>
    <label>作成月数 (残)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>