force-app/main/default/objects/OpportunityLineItem/fields/cre_mo__c.field-meta.xml
<CustomField>
    <fullName>cre_mo__c</fullName>
    <inlineHelpText>保守製品に対して各月毎のレコードを作成する場合入力してください。
入力例： 5
※ 現在のレコード＋4レコードが新規作成され、金額が5ヶ月に按分されます。（あまりは手動入力したレコードに加算されます）</inlineHelpText>
    <label>回数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>