force-app/main/default/objects/OpportunityLineItem/fields/DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTime__c</fullName>
    <label>Delivery time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>