force-app/main/default/objects/OpportunityLineItem/fields/EndMonth__c.field-meta.xml
<CustomField>
    <fullName>EndMonth__c</fullName>
    <label>終了月</label>
    <length>10</length>
    <type>Text</type>
</CustomField>