force-app/main/default/objects/OpportunityLineItem/fields/EuCustomsRate__c.field-meta.xml
<CustomField>
    <fullName>EuCustomsRate__c</fullName>
    <label>EU Customs Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>