force-app/main/default/objects/OpportunityLineItem/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>【Id取得用】商談商品Id</label>
    <type>Text</type>
</CustomField>