force-app/main/default/objects/OpportunityLineItem/fields/FreeProductFlag__c.field-meta.xml
<CustomField>
    <fullName>FreeProductFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自由入力製品</label>
    <type>Checkbox</type>
</CustomField>