force-app/main/default/objects/OpportunityLineItem/fields/FullyHidden__c.field-meta.xml
<CustomField>
    <fullName>FullyHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>