force-app/main/default/objects/OpportunityLineItem/fields/Gaibubango__c.field-meta.xml
<CustomField>
    <fullName>Gaibubango__c</fullName>
    <label>外部番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>