force-app/main/default/objects/OpportunityLineItem/fields/HacchuKingaku__c.field-meta.xml
<CustomField>
    <fullName>HacchuKingaku__c</fullName>
    <description>CAS用項目</description>
    <label>発注金額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>