force-app/main/default/objects/OpportunityLineItem/fields/HannyuYoteiDate__c.field-meta.xml
<CustomField>
    <fullName>HannyuYoteiDate__c</fullName>
    <label>搬入予定日</label>
    <type>Date</type>
</CustomField>