force-app/main/default/objects/OpportunityLineItem/fields/HHS_DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>HHS_DiscountPrice__c</fullName>
    <description>見積製品から案件製品へ連携
案件から出す受注転送レポートで利用</description>
    <label>値引後金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>