force-app/main/default/objects/OpportunityLineItem/fields/HHS_HinmokuCode__c.field-meta.xml
<CustomField>
    <fullName>HHS_HinmokuCode__c</fullName>
    <formula>PricebookEntry.Product2.SapCode__c</formula>
    <label>品目コード</label>
    <type>Text</type>
</CustomField>