force-app/main/default/objects/OpportunityLineItem/fields/HHS_HinmokuCodeDisp__c.field-meta.xml
<CustomField>
    <fullName>HHS_HinmokuCodeDisp__c</fullName>
    <formula>IF ( FreeProductFlag__c , HinmokuCode__c ,PricebookEntry.Product2.SapCode__c)</formula>
    <label>品目コード(帳票用)</label>
    <type>Text</type>
</CustomField>