force-app/main/default/objects/OpportunityLineItem/fields/HHS_Hyouji__c.field-meta.xml
<CustomField>
    <fullName>HHS_Hyouji__c</fullName>
    <defaultValue>false</defaultValue>
    <label>表示</label>
    <type>Checkbox</type>
</CustomField>