force-app/main/default/objects/OpportunityLineItem/fields/HHS_Kojogenkariekiritsu__c.field-meta.xml
<CustomField>
    <fullName>HHS_Kojogenkariekiritsu__c</fullName>
    <label>工場原価利益率（％）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>