force-app/main/default/objects/OpportunityLineItem/fields/HHS_Tanni__c.field-meta.xml
<CustomField>
    <fullName>HHS_Tanni__c</fullName>
    <label>単位</label>
    <length>100</length>
    <type>Text</type>
</CustomField>