force-app/main/default/objects/OpportunityLineItem/fields/HikiaiHinmei__c.field-meta.xml
<CustomField>
    <fullName>HikiaiHinmei__c</fullName>
    <description>CAS用項目</description>
    <inlineHelpText>「装置」（名称）に変更のある場合のみ入力
変更がない場合は入力不要</inlineHelpText>
    <label>品名</label>
    <length>40</length>
    <type>Text</type>
</CustomField>