force-app/main/default/objects/OpportunityLineItem/fields/HinmokuCode__c.field-meta.xml
<CustomField>
    <fullName>HinmokuCode__c</fullName>
    <label>品目コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>