force-app/main/default/objects/OpportunityLineItem/fields/hoshuflag__c.field-meta.xml
<CustomField>
    <fullName>hoshuflag__c</fullName>
    <formula>IF (ISPICKVAL(PricebookEntry.Product2.ItemDivision__c, &quot;保守&quot;) 
, true, false)</formula>
    <label>保守フラグ</label>
    <type>Checkbox</type>
</CustomField>