force-app/main/default/objects/OpportunityLineItem/fields/HospitalId__c.field-meta.xml
<CustomField>
    <fullName>HospitalId__c</fullName>
    <description>CAS用項目</description>
    <label>施設ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>