force-app/main/default/objects/OpportunityLineItem/fields/InheritingTransferHistory__c.field-meta.xml
<CustomField>
    <fullName>InheritingTransferHistory__c</fullName>
    <description>CAS用項目</description>
    <label>譲受譲渡記録</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>