force-app/main/default/objects/OpportunityLineItem/fields/Installation_Warranty_product__c.field-meta.xml
<CustomField>
    <fullName>Installation_Warranty_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation&amp;Warranty_product</label>
    <type>Checkbox</type>
</CustomField>