force-app/main/default/objects/OpportunityLineItem/fields/ItemCheckErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemCheckErrorDescription__c</fullName>
    <label>品目チェックエラー内容</label>
    <length>100</length>
    <type>Text</type>
</CustomField>