force-app/main/default/objects/OpportunityLineItem/fields/JikkouYosanKeijoFlag__c.field-meta.xml
<CustomField>
    <fullName>JikkouYosanKeijoFlag__c</fullName>
    <description>CAS用項目</description>
    <inlineHelpText>0: 未計上
1: 計上</inlineHelpText>
    <label>実行予算計上フラグ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>