force-app/main/default/objects/OpportunityLineItem/fields/Jinendoyosanfuragu__c.field-meta.xml
<CustomField>
    <fullName>Jinendoyosanfuragu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>次年度予算フラグ</label>
    <type>Checkbox</type>
</CustomField>