force-app/main/default/objects/OpportunityLineItem/fields/JuchuYoteiNengetsu__c.field-meta.xml
<CustomField>
    <fullName>JuchuYoteiNengetsu__c</fullName>
    <formula>TEXT(JuchuYoteiNen__c)
&amp;
&quot;/&quot;
&amp;
CASE(
 JuchuYoteiTsuki__c ,
 &quot;1&quot;, &quot;01&quot;,
 &quot;2&quot;, &quot;02&quot;,
 &quot;3&quot;, &quot;03&quot;,
 &quot;4&quot;, &quot;04&quot;,
 &quot;5&quot;, &quot;05&quot;,
 &quot;6&quot;, &quot;06&quot;,
 &quot;7&quot;, &quot;07&quot;,
 &quot;8&quot;, &quot;08&quot;,
 &quot;9&quot;, &quot;09&quot;,
 &quot;10&quot;, &quot;10&quot;,
 &quot;11&quot;, &quot;11&quot;,
 &quot;12&quot;, &quot;12&quot;,
 &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注予定</label>
    <type>Text</type>
</CustomField>