force-app/main/default/objects/OpportunityLineItem/fields/Kakimitoshiyosanfuragu__c.field-meta.xml
<CustomField>
    <fullName>Kakimitoshiyosanfuragu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>下期見通予算フラグ</label>
    <type>Checkbox</type>
</CustomField>