force-app/main/default/objects/OpportunityLineItem/fields/Keishiki__c.field-meta.xml
<CustomField>
    <fullName>Keishiki__c</fullName>
    <label>型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>