force-app/main/default/objects/OpportunityLineItem/fields/KeiyakuNo__c.field-meta.xml
<CustomField>
    <fullName>KeiyakuNo__c</fullName>
    <label>契約No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>