force-app/main/default/objects/OpportunityLineItem/fields/LineProductId__c.field-meta.xml
<CustomField>
    <fullName>LineProductId__c</fullName>
    <formula>PricebookEntryId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【Id取得用】価格表の製品Id</label>
    <type>Text</type>
</CustomField>