force-app/main/default/objects/OpportunityLineItem/fields/ListPriceDisp__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDisp__c</fullName>
    <description>受注検討表用に
自由入力製品⇒X値
それ以外⇒リスト価格
を設定</description>
    <formula>IF ( FreeProductFlag__c , ShikiriPrice__c ,ListPrice)</formula>
    <label>標準価格(帳票用)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>