force-app/main/default/objects/OpportunityLineItem/fields/ListPriceTotal__c.field-meta.xml
<CustomField>
    <fullName>ListPriceTotal__c</fullName>
    <formula>ListPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>