force-app/main/default/objects/OpportunityLineItem/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>保守フラグ</label>
    <type>Checkbox</type>
</CustomField>