force-app/main/default/objects/OpportunityLineItem/fields/MakerName__c.field-meta.xml
<CustomField>
    <fullName>MakerName__c</fullName>
    <description>CAS用項目</description>
    <label>メーカ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>