force-app/main/default/objects/OpportunityLineItem/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <label>MC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>