force-app/main/default/objects/OpportunityLineItem/fields/MedicalInstrumentProductName__c.field-meta.xml
<CustomField>
    <fullName>MedicalInstrumentProductName__c</fullName>
    <description>CAS用項目</description>
    <label>薬事製品名</label>
    <length>40</length>
    <type>Text</type>
</CustomField>