force-app/main/default/objects/OpportunityLineItem/fields/mitsumoritekisuto__c.field-meta.xml
<CustomField>
    <fullName>mitsumoritekisuto__c</fullName>
    <label>見積テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>