force-app/main/default/objects/OpportunityLineItem/fields/MoCrearedCheck__c.field-meta.xml
<CustomField>
    <fullName>MoCrearedCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>チェック済：「回数」に設定された分の保守製品レコードが自動作成済
※ チェックを外すと再度新規レコードを作成することが出来ます。</inlineHelpText>
    <label>月展開済</label>
    <type>Checkbox</type>
</CustomField>