force-app/main/default/objects/OpportunityLineItem/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>HHS利用：見積商品のName(見積商品)を格納、商談から出す受注転送レポートで利用</description>
    <label>見積商品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>