force-app/main/default/objects/OpportunityLineItem/fields/NameHidden__c.field-meta.xml
<CustomField>
    <fullName>NameHidden__c</fullName>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Hidden</label>
    <type>Text</type>
</CustomField>