force-app/main/default/objects/OpportunityLineItem/fields/Nendoyosanfuragu__c.field-meta.xml
<CustomField>
    <fullName>Nendoyosanfuragu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>年度予算フラグ</label>
    <type>Checkbox</type>
</CustomField>