force-app/main/default/objects/OpportunityLineItem/fields/Nouki__c.field-meta.xml
<CustomField>
    <fullName>Nouki__c</fullName>
    <description>CAS用項目</description>
    <label>納期</label>
    <type>Date</type>
</CustomField>