force-app/main/default/objects/OpportunityLineItem/fields/OpportunityLineItemNo__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemNo__c</fullName>
    <description>CAS用項目</description>
    <externalId>true</externalId>
    <label>装置番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>