force-app/main/default/objects/OpportunityLineItem/fields/OrdersAmountM__c.field-meta.xml
<CustomField>
    <fullName>OrdersAmountM__c</fullName>
    <formula>TotalPrice / 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注額 (M)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>