force-app/main/default/objects/OpportunityLineItem/fields/OrdersYoteiDate__c.field-meta.xml
<CustomField>
    <fullName>OrdersYoteiDate__c</fullName>
    <label>受注予定月</label>
    <length>10</length>
    <type>Text</type>
</CustomField>