force-app/main/default/objects/OpportunityLineItem/fields/OverseasFreightCosts__c.field-meta.xml
<CustomField>
    <fullName>OverseasFreightCosts__c</fullName>
    <label>Overseas Freight Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>