force-app/main/default/objects/OpportunityLineItem/fields/PartsNo__c.field-meta.xml
<CustomField>
    <fullName>PartsNo__c</fullName>
    <label>パーツ No. 見積 No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>