force-app/main/default/objects/OpportunityLineItem/fields/ProductFlg__c.field-meta.xml
<CustomField>
    <fullName>ProductFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>本体</label>
    <type>Checkbox</type>
</CustomField>