force-app/main/default/objects/OpportunityLineItem/fields/ProductNameDisp__c.field-meta.xml
<CustomField>
    <fullName>ProductNameDisp__c</fullName>
    <formula>IF ( FreeProductFlag__c ,  ProductName__c ,PricebookEntry.Product2.Name)</formula>
    <label>名称( 帳票用)</label>
    <type>Text</type>
</CustomField>